--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -1,23 +1,41 @@
 .popup__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 50px;
+  margin-top: 12px;
+  border: none;
+  border-radius: 2px;
+  color: white;
   font-size: 18px;
   line-height: 22px;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #000;
-  border-radius: 2px;
-  border: none;
   transition: visibility 0s, background 0.3s;
-  margin-top: 48px;
 }
+
 
 .popup__button:hover {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
 }
+
+.popup__button_inactive {
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  color: rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+}
+
+.popup__button_inactive:hover {
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  color: rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+} 
+
+.popup_type_delete-card .popup__button {
+  margin-top: 33px;
+}
+
 
 @media screen and (max-width: 568px) {
   .popup__button {
