--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -1,3 +1,16 @@
 .popup__form {
-  margin-top: 27px;
+  margin-top: 54px;
 }
+
+.popup__form-field {
+  position: relative;
+  display: flex;
+  height: 58px;
+  flex-direction: column;
+  margin-bottom: 3px;
+}
+
+.popup__form-field:last-of-type {
+  margin-bottom: 0;
+}
+
