--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,17 +1,32 @@
 .popup__input {
   width: 100%;
-  height: 47px;
+  height: 27px;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
   font-size: 14px;
   line-height: 18px;
   box-sizing: border-box;
   padding: 10px 0 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
-.popup__input:last-of-type {
-  margin-bottom: 0;
+.popup__input:focus {
+  outline: none;
+}
+
+.popup__input_type_error {
+  border-bottom: 1px solid #FF0000;
+}
+
+.popup__input-error {
+  display: none;
+}
+
+.popup__input-error_active {
+  display: block;
+  font-size: 12px;
+  line-height: 1.21;
+  color: #FF0000;
 }
 
 @media screen and (max-width: 568px) {
