--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,13 +1,36 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
+  margin: 0 29px 0 0;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-size: cover;
   background-position: center;
-  margin: 0 29px 0 0;
+  background-size: cover;
+  cursor: pointer;
+  z-index: 0;
 }
+
+.profile__image::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.7);
+  background-image: url('../../../images/edit-avatar.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: opacity .5s;
+}
+
+.profile__image:hover::after {
+  opacity: 1;
+}
+
 
 @media screen and (max-width: 740px) {
   .profile__image {
